--- a/properties/com/jidesoft/swing/swing_az_AZ.properties
+++ b/properties/com/jidesoft/swing/swing_az_AZ.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=S\u0259hif\u0259nin ba\u015f\u0131na \u00e7atd\u0131
 SearchableBar.reachedBottomRepeat=Yuxar\u0131dan davam ed\u0259r\u0259k s\u0259hif\u0259nin a\u015fa\u011f\u0131s\u0131na \u00e7atd\u0131
 SearchableBar.reachedTopRepeat=A\u015fa\u011f\u0131dan ba\u015flayaraq S\u0259hif\u0259nin yuxar\u0131s\u0131na \u00e7atd\u0131
 SearchableBar.notFound=Fraza tap\u0131lmad\u0131
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Ham\u0131s\u0131)
