--- a/properties/com/jidesoft/swing/swing_ca_ES.properties
+++ b/properties/com/jidesoft/swing/swing_ca_ES.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=S'ha arribat al principi de la p\u00e0gina
 SearchableBar.reachedBottomRepeat=S'ha arribat al final de la p\u00e0gina, continua des del principi
 SearchableBar.reachedTopRepeat=S'ha arribat al principi de la p\u00e0gina, continua des del final
 SearchableBar.notFound=No s'ha trobat la frase
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Tot)
