--- a/properties/com/jidesoft/swing/swing_cs_CZ.properties
+++ b/properties/com/jidesoft/swing/swing_cs_CZ.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Byl dosa\u017een za\u010d\u00e1tek str\u00e1nky
 SearchableBar.reachedBottomRepeat=Byl dosa\u017een konec str\u00e1nky, pokra\u010dovalo se z vrchu
 SearchableBar.reachedTopRepeat=Byl dosa\u017een za\u010d\u00e1tek str\u00e1nky, pokra\u010dovalo se ze spodu
 SearchableBar.notFound=Fr\u00e1ze nenalezena
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(V\u0161e)
