--- a/properties/com/jidesoft/swing/swing_da_DK.properties
+++ b/properties/com/jidesoft/swing/swing_da_DK.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=N\u00e5ede toppen af siden
 SearchableBar.reachedBottomRepeat=N\u00e5ede bunden af siden, fortsat fra toppen
 SearchableBar.reachedTopRepeat=N\u00e5ede toppen af siden, fortsat fra bunden
 SearchableBar.notFound=Vendingen ikke fundet
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Alt)
