--- a/properties/com/jidesoft/swing/swing_de.properties
+++ b/properties/com/jidesoft/swing/swing_de.properties
@@ -18,7 +18,7 @@ SearchableBar.findPrevious.tooltip=Vorheriges Auftreten des Ausdrucks suchen
 SearchableBar.highlights=Hervorheben
 SearchableBar.highlights.mnemonic=H
 SearchableBar.highlights.tooltip=Jedes Auftreten des Ausdrucks hervorheben
-SearchableBar.matchCase=Groﬂ-/Kleinschreibung
+SearchableBar.matchCase=Gro\u00df-/Kleinschreibung
 SearchableBar.matchCase.mnemonic=K
 SearchableBar.repeats=Wiederholung
 SearchableBar.repeats.mnemonic=w
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Seitenanfang erreicht
 SearchableBar.reachedBottomRepeat=Seitenende erreicht, von oben fortgesetzt
 SearchableBar.reachedTopRepeat=Seitenanfang erreicht, von unten fortgesetzt 
 SearchableBar.notFound=Ausdruck nicht gefunden
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Alle)
