--- a/properties/com/jidesoft/swing/swing_es_MX.properties
+++ b/properties/com/jidesoft/swing/swing_es_MX.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Se ha llegado al principio de la p\u00e1gina
 SearchableBar.reachedBottomRepeat=Se ha llegado al final de la p\u00e1gina, contin\u00faa desde el principio
 SearchableBar.reachedTopRepeat=Se ha llegado al principio de la p\u00e1gina, contin\u00faa desde el final
 SearchableBar.notFound=No se ha encontrado la frase
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Todas)
