--- a/properties/com/jidesoft/swing/swing_eu_ES.properties
+++ b/properties/com/jidesoft/swing/swing_eu_ES.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Orriaren hasierara iritsi da
 SearchableBar.reachedBottomRepeat=Orriaren bukaerara iritsi da, goitik jarraitu
 SearchableBar.reachedTopRepeat=Orriaren hasierara iritsi da, betehetik jarraitu du
 SearchableBar.notFound=Ez da esaldia topatu
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Denak)
