--- a/properties/com/jidesoft/swing/swing_fi_FI.properties
+++ b/properties/com/jidesoft/swing/swing_fi_FI.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Sivun alku saavutettiin
 SearchableBar.reachedBottomRepeat=Sivun loppu saavutettiin, jatkettiin alusta
 SearchableBar.reachedTopRepeat=Sivun alku saavutettiin, jatkettiin lopusta
 SearchableBar.notFound=Lauseketta ei l\u00f6ytynyt
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Kaikki)
