--- a/properties/com/jidesoft/swing/swing_fr.properties
+++ b/properties/com/jidesoft/swing/swing_fr.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Haut de la page atteint
 SearchableBar.reachedBottomRepeat=Bas de la page atteint, reprise \u00e0 partir du haut 
 SearchableBar.reachedTopRepeat=Haut de la page atteint, reprise \u00e0 partir du bas
 SearchableBar.notFound=Expression introuvable
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Tout)
