--- a/properties/com/jidesoft/swing/swing_gl_ES.properties
+++ b/properties/com/jidesoft/swing/swing_gl_ES.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Chegou ao comezo da p\u00e1xina
 SearchableBar.reachedBottomRepeat=Chegou ao final da p\u00e1xina, seguido dende o comezo
 SearchableBar.reachedTopRepeat=Chegou ao comezo da p\u00e1xina, seguido dende o final
 SearchableBar.notFound=Frase non atopada
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Todo)
