--- a/properties/com/jidesoft/swing/swing_ha_NG.properties
+++ b/properties/com/jidesoft/swing/swing_ha_NG.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Na isa kan shafin
 SearchableBar.reachedBottomRepeat=Na isa kasan shafin, an ci gaba daga kan
 SearchableBar.reachedTopRepeat=Na isa kan shafin, an ci gaba daga daga kasan
 SearchableBar.notFound=Jimlar ba a gano ba
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Duka)
