--- a/properties/com/jidesoft/swing/swing_hr_HR.properties
+++ b/properties/com/jidesoft/swing/swing_hr_HR.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Dosegnut je vrh stranice
 SearchableBar.reachedBottomRepeat=Dosegnuto je dno stranice, nastavak s vrha
 SearchableBar.reachedTopRepeat=Dosegnut je vrh stranice, nastavak s dna
 SearchableBar.notFound=Izraz nije prona\u0111en
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Sve)
