--- a/properties/com/jidesoft/swing/swing_hu_HU.properties
+++ b/properties/com/jidesoft/swing/swing_hu_HU.properties
@@ -27,3 +27,8 @@ SearchableBar.reachedTop=Lap tetej\u00e9re \u00e9rt
 SearchableBar.reachedBottomRepeat=Lap alj\u00e1ra \u00e9rt, folytat\u00e1s a tetej\u00e9r\u0151l
 SearchableBar.reachedTopRepeat=Lap tetej\u00e9re \u00e9rt, folytat\u00e1s az alj\u00e1t\u00f3l
 SearchableBar.notFound=Nincs tal\u00e1lat
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u00d6sszes)
