--- a/properties/com/jidesoft/swing/swing_it.properties
+++ b/properties/com/jidesoft/swing/swing_it.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Raggiunto inizio della pagina
 SearchableBar.reachedBottomRepeat=Raggiunta fine della pagina, continua dall'inizio
 SearchableBar.reachedTopRepeat=Raggiunto inizio della pagina, continua dalla fine
 SearchableBar.notFound=Frase non trovata
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Tutto)
