--- a/properties/com/jidesoft/swing/swing_iw_IL.properties
+++ b/properties/com/jidesoft/swing/swing_iw_IL.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u05d6\u05d4\u05d5 \u05ea\u05d7\u05d9\u05dc\u05ea \u05d
 SearchableBar.reachedBottomRepeat=\u05d6\u05d4\u05d5 \u05e1\u05d5\u05e3 \u05d4\u05e2\u05de\u05d5\u05d3, \u05de\u05de\u05e9\u05d9\u05da \u05de\u05ea\u05d7\u05d9\u05dc\u05ea \u05d4\u05e2\u05de\u05d5\u05d3
 SearchableBar.reachedTopRepeat=\u05d6\u05d4\u05d5 \u05ea\u05d7\u05d9\u05dc\u05ea \u05d4\u05e2\u05de\u05d5\u05d3, \u05de\u05de\u05e9\u05d9\u05da \u05de\u05e1\u05d5\u05e3 \u05d4\u05e2\u05de\u05d5\u05d3
 SearchableBar.notFound=\u05d1\u05d9\u05d8\u05d5\u05d9 \u05dc\u05d0 \u05e0\u05de\u05e6\u05d0
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u05d4\u05db\u05dc)
