--- a/properties/com/jidesoft/swing/swing_ja.properties
+++ b/properties/com/jidesoft/swing/swing_ja.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u30da\u30fc\u30b8\u306e\u4e0b\u306b\u9054\u3057\u307e\
 SearchableBar.reachedBottomRepeat=\u30da\u30fc\u30b8\u306e\u4e0b\u306b\u9054\u3057\u307e\u3057\u305f\u3002\u4e0a\u304b\u3089\u7d9a\u3051\u307e\u3059
 SearchableBar.reachedTopRepeat=\u30da\u30fc\u30b8\u306e\u4e0a\u306b\u9054\u3057\u307e\u3057\u305f\u3002\u4e0b\u304b\u3089\u7d9a\u3051\u307e\u3059
 SearchableBar.notFound=\u30d5\u30ec\u30fc\u30ba\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u3059\u3079\u3066)
