--- a/properties/com/jidesoft/swing/swing_ko.properties
+++ b/properties/com/jidesoft/swing/swing_ko.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\ud398\uc774\uc9c0 \uc0c1\ub2e8\uc5d0 \uc774\ub984
 SearchableBar.reachedBottomRepeat=\ud398\uc774\uc9c0 \ud558\ub2e8\uc5d0 \uc774\ub984, \uc0c1\ub2e8\uc5d0\uc11c \uacc4\uc18d
 SearchableBar.reachedTopRepeat=\ud398\uc774\uc9c0 \uc0c1\ub2e8\uc5d0 \uc774\ub984, \ud558\ub2e8\uc5d0\uc11c \uacc4\uc18d
 SearchableBar.notFound=\uc5b4\uad6c\ub97c \ucc3e\uc744 \uc218 \uc5c6\uc74c
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\ubaa8\ub450)
