--- a/properties/com/jidesoft/swing/swing_nl.properties
+++ b/properties/com/jidesoft/swing/swing_nl.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Begin van pagina bereikt
 SearchableBar.reachedBottomRepeat=Einde van pagina bereikt, voortgezet vanaf begin pagina
 SearchableBar.reachedTopRepeat=Begin van pagina bereikt, voortgezet vanaf einde pagina
 SearchableBar.notFound=Zinsnede niet aangetroffen
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Alle)
