--- a/properties/com/jidesoft/swing/swing_no_NO.properties
+++ b/properties/com/jidesoft/swing/swing_no_NO.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=N\u00e5dd toppen av siden
 SearchableBar.reachedBottomRepeat=N\u00e5dd bunnen av siden, fortsatt fra toppen
 SearchableBar.reachedTopRepeat=N\u00e5dd toppen av siden, fortsatt fra bunnen 
 SearchableBar.notFound=Setning ikke funnet 
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Alle)
