--- a/properties/com/jidesoft/swing/swing_pl_PL.properties
+++ b/properties/com/jidesoft/swing/swing_pl_PL.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Pocz\u0105tek strony
 SearchableBar.reachedBottomRepeat=Wyszukiwanie osi\u0105gn\u0119\u0142o koniec strony, kontynuacja od pocz\u0105tku
 SearchableBar.reachedTopRepeat=Wyszukiwanie osi\u0105gn\u0119\u0142o pocz\u0105tek strony, kontynuacja od ko\u0144ca
 SearchableBar.notFound=Szukany element nie zosta\u0142 znaleziony.
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Wszystko)
