--- a/properties/com/jidesoft/swing/swing_ro_RO.properties
+++ b/properties/com/jidesoft/swing/swing_ro_RO.properties
@@ -29,3 +29,7 @@ SearchableBar.reachedBottomRepeat=S-a ajuns la cap\u0103tul de jos al paginii, c
 SearchableBar.reachedTopRepeat=S-a ajuns la cap\u0103tul de sus al paginii, continuat de jos
 SearchableBar.notFound=Propozi\u0163ia nu a fost g\u0103sit\u0103
 
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Totul)
