--- a/properties/com/jidesoft/swing/swing_sk_SK.properties
+++ b/properties/com/jidesoft/swing/swing_sk_SK.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Dosiahnut\u00fd za\u010diatok strany
 SearchableBar.reachedBottomRepeat=Dosiahnut\u00fd koniec strany, pokra\u010dova\u0165 od za\u010diatku
 SearchableBar.reachedTopRepeat=Dosiahnut\u00fd za\u010diatok strany, pokra\u010dova\u0165 od konca
 SearchableBar.notFound=Fr\u00e1za sa nena\u0161la
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(V\u0161etko)
