--- a/properties/com/jidesoft/swing/swing_sl_SI.properties
+++ b/properties/com/jidesoft/swing/swing_sl_SI.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Dose\u017een vrh strani
 SearchableBar.reachedBottomRepeat=Dose\u017eeno dno strani, od vrha navzdol
 SearchableBar.reachedTopRepeat=Dose\u017een vrh strani, od dna navzgor
 SearchableBar.notFound=Fraza ni najdena
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Vsi)
