--- a/properties/com/jidesoft/swing/swing_sv.properties
+++ b/properties/com/jidesoft/swing/swing_sv.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Kom till b\u00f6rjan av sidan
 SearchableBar.reachedBottomRepeat=Kom till slutet av sidan, fortsatte fr\u00e5n b\u00f6rjan
 SearchableBar.reachedTopRepeat=Kom till b\u00f6rjan av sidan, fortsatte fr\u00e5n slutet
 SearchableBar.notFound=Frasen hittades inte
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Alla)
