--- a/properties/com/jidesoft/swing/swing_tk_TM.properties
+++ b/properties/com/jidesoft/swing/swing_tk_TM.properties
@@ -29,3 +29,7 @@ SearchableBar.reachedBottomRepeat=Sahypany\u0148 a\u015fagyna \u00ffetdi, \u00ff
 SearchableBar.reachedTopRepeat=Sahypany\u0148 \u00ffokarsyna \u00ffetdi, a\u015fagyndan ba\u015flan\u00ffar 
 SearchableBar.notFound=J\u00fcmle tapylmady
 
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Hemmesi)
