--- a/properties/com/jidesoft/swing/swing_tr_TR.properties
+++ b/properties/com/jidesoft/swing/swing_tr_TR.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Sayfan\u0131n ba\u015f\u0131na ula\u015f\u0131ld\u0131
 SearchableBar.reachedBottomRepeat=Sayfan\u0131n sonuna ula\u015f\u0131ld\u0131, ba\u015ftan devam ediliyor
 SearchableBar.reachedTopRepeat=Sayfan\u0131n ba\u015f\u0131na ula\u015f\u0131ld\u0131, sondan devam ediliyor
 SearchableBar.notFound=S\u00f6zc\u00fck/s\u00f6zc\u00fck grubu bulunamad\u0131
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(T\u00fcm\u00fc)
