--- a/properties/com/jidesoft/swing/swing_zh_TW.properties
+++ b/properties/com/jidesoft/swing/swing_zh_TW.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u81f3\u9801\u9802\u7aef
 SearchableBar.reachedBottomRepeat=\u81f3\u9801\u5e95\u7aef\uff0c\u7e7c\u7e8c\u5f9e\u9802\u7aef
 SearchableBar.reachedTopRepeat=\u81f3\u9801\u9802\u7aef\uff0c\u7e7c\u7e8c\u5f9e\u5e95\u7aef
 SearchableBar.notFound=\u672a\u5c0b\u627e\u5230\u8a5e\u7d44
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u5168\u90e8)
