--- a/properties/com/jidesoft/swing/swing_bn_IN.properties
+++ b/properties/com/jidesoft/swing/swing_bn_IN.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u09aa\u09c3\u09b7\u09cd\u09a0\u09be\u09b0 \u0989\u09aa
 SearchableBar.reachedBottomRepeat=\u09aa\u09c3\u09b7\u09cd\u09a0\u09be\u09b0 \u09b6\u09c7\u09b7 \u0985\u0982\u09b6\u09c7 \u09aa\u09cc\u0981\u099b\u09c7\u099b\u09c7, \u0989\u09aa\u09b0\u09c7\u09b0 \u09a6\u09bf\u0995 \u09a5\u09c7\u0995\u09c7 \u09b6\u09c1\u09b0\u09c1 \u0995\u09b0\u09c7
 SearchableBar.reachedTopRepeat=\u09aa\u09c3\u09b7\u09cd\u09a0\u09be\u09b0 \u0989\u09aa\u09b0\u09c7\u09b0 \u0985\u0982\u09b6\u09c7 \u09aa\u09cc\u0981\u099b\u09c7\u099b\u09c7, \u09a8\u09c0\u099a\u09c7\u09b0 \u09a6\u09bf\u0995 \u09a5\u09c7\u0995\u09c7 \u09b6\u09c1\u09b0\u09c1 \u0995\u09b0\u09c7
 SearchableBar.notFound=\u09b6\u09ac\u09cd\u09a6\u09ac\u09a8\u09cd\u09a7 \u0996\u09c1\u0981\u099c\u09c7 \u09aa\u09be\u0993\u09df\u09be \u0997\u09c7\u09b2 \u09a8\u09be
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u09b8\u09ae\u09b8\u09cd\u09a4)
