--- a/properties/com/jidesoft/swing/swing_el_GR.properties
+++ b/properties/com/jidesoft/swing/swing_el_GR.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u0388\u03c6\u03c4\u03b1\u03c3\u03b5 \u03c3\u03c4\u03bf
 SearchableBar.reachedBottomRepeat=\u0388\u03c6\u03c4\u03b1\u03c3\u03b5 \u03c3\u03c4\u03bf \u03ba\u03ac\u03c4\u03c9 \u03bc\u03ad\u03c1\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1\u03c2, \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1 \u03b1\u03c0\u03cc \u03c0\u03ac\u03bd\u03c9
 SearchableBar.reachedTopRepeat=\u0388\u03c6\u03c4\u03b1\u03c3\u03b5 \u03c3\u03c4\u03bf \u03c0\u03ac\u03bd\u03c9 \u03bc\u03ad\u03c1\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1\u03c2, \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1 \u03b1\u03c0\u03cc \u03ba\u03ac\u03c4\u03c9
 SearchableBar.notFound=\u0397 \u03c6\u03c1\u03ac\u03c3\u03b7 \u03b4\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u038c\u03bb\u03b1)
