--- a/properties/com/jidesoft/swing/swing_en_UK.properties
+++ b/properties/com/jidesoft/swing/swing_en_UK.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=Reached top of the page
 SearchableBar.reachedBottomRepeat=Reached bottom of the page, continued from top
 SearchableBar.reachedTopRepeat=Reached top of the page, continued from bottom
 SearchableBar.notFound=Phrase not found
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(All)
