--- a/properties/com/jidesoft/swing/swing_hi_IN.properties
+++ b/properties/com/jidesoft/swing/swing_hi_IN.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u092a\u0943\u0937\u094d\u0920 \u092e\u0947\u0902 \u093
 SearchableBar.reachedBottomRepeat=\u092a\u0943\u0937\u094d\u0920 \u092e\u0947\u0902 \u0938\u092c\u0938\u0947 \u0928\u0940\u091a\u0947, \u090a\u092a\u0930 \u0938\u0947 \u091c\u093e\u0930\u0940
 SearchableBar.reachedTopRepeat=\u092a\u0943\u0937\u094d\u0920 \u092e\u0947\u0902 \u0938\u092c\u0938\u0947 \u090a\u092a\u0930, \u0928\u0940\u091a\u0947 \u0938\u0947 \u091c\u093e\u0930\u0940
 SearchableBar.notFound=\u0935\u093e\u0915\u094d\u200d\u092f\u093e\u0902\u0936 \u0928\u0939\u0940\u0902 \u092e\u093f\u0932\u093e
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u0938\u092d\u0940)
