--- a/properties/com/jidesoft/swing/swing_pa_IN.properties
+++ b/properties/com/jidesoft/swing/swing_pa_IN.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u0a2a\u0a70\u0a28\u0a47 \u0a26\u0a47 \u0a38\u0a3f\u0a1
 SearchableBar.reachedBottomRepeat=\u0a2a\u0a70\u0a28\u0a47 \u0a26\u0a47 \u0a38\u0a3f\u0a16\u0a30 \u0a24\u0a4b\u0a02 \u0a1c\u0a3e\u0a30\u0a40 \u0a30\u0a16\u0a26\u0a47 \u0a39\u0a4b\u0a0f \u0a2a\u0a70\u0a28\u0a47 \u0a26\u0a47 \u0a39\u0a47\u0a20 \u0a24\u0a47 \u0a2a\u0a39\u0a41\u0a70\u0a1a \u0a17\u0a3f\u0a06 \u0a39\u0a48
 SearchableBar.reachedTopRepeat=\u0a2a\u0a70\u0a28\u0a47 \u0a26\u0a47 \u0a39\u0a47\u0a20 \u0a24\u0a4b\u0a02 \u0a1c\u0a3e\u0a30\u0a40 \u0a30\u0a16\u0a26\u0a47 \u0a39\u0a4b\u0a0f \u0a2a\u0a70\u0a28\u0a47 \u0a26\u0a47 \u0a38\u0a3f\u0a16\u0a30 \u0a24\u0a47 \u0a2a\u0a39\u0a41\u0a70\u0a1a \u0a17\u0a3f\u0a06 \u0a39\u0a48
 SearchableBar.notFound=\u0a35\u0a3e\u0a15\u0a3e\u0a02\u0a36 \u0a28\u0a39\u0a40\u0a02 \u0a32\u0a71\u0a2d\u0a3f\u0a06
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u0a38\u0a3e\u0a30\u0a47)
