--- a/properties/com/jidesoft/swing/swing_pt_BR.properties
+++ b/properties/com/jidesoft/swing/swing_pt_BR.properties
@@ -29,3 +29,7 @@ SearchableBar.reachedBottomRepeat=Chegou ao final da p\u00e1gina, continua\u00e7
 SearchableBar.reachedTopRepeat=Chegou \u00e0 parte superior da p\u00e1gina, continua\u00e7\u00e3o do final da p\u00e1gina
 SearchableBar.notFound=Frase n\u00e3o encontrada
 
+#
+# CheckBoxList
+#
+CheckBoxList.all=(Todos)
