--- a/properties/com/jidesoft/swing/swing_te_IN.properties
+++ b/properties/com/jidesoft/swing/swing_te_IN.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u0c2a\u0c41\u0c1f \u0c0e\u0c17\u0c41\u0c35 \u0c2d\u0c3
 SearchableBar.reachedBottomRepeat=\u0c2a\u0c41\u0c1f \u0c26\u0c3f\u0c17\u0c41\u0c35 \u0c2d\u0c3e\u0c17\u0c3e\u0c28\u0c3f\u0c15\u0c3f \u0c1a\u0c47\u0c30\u0c41\u0c15\u0c41\u0c02\u0c26\u0c3f, \u0c0e\u0c17\u0c41\u0c35 \u0c2d\u0c3e\u0c17\u0c02 \u0c28\u0c41\u0c02\u0c21\u0c3f \u0c15\u0c4a\u0c28\u0c38\u0c3e\u0c17\u0c41\u0c24\u0c41\u0c02\u0c26\u0c3f
 SearchableBar.reachedTopRepeat=\u0c2a\u0c41\u0c1f \u0c0e\u0c17\u0c41\u0c35 \u0c2d\u0c3e\u0c17\u0c3e\u0c28\u0c3f\u0c15\u0c3f \u0c1a\u0c47\u0c30\u0c41\u0c15\u0c41\u0c02\u0c26\u0c3f, \u0c26\u0c3f\u0c17\u0c41\u0c35 \u0c2d\u0c3e\u0c17\u0c02 \u0c28\u0c41\u0c02\u0c21\u0c3f \u0c15\u0c4a\u0c28\u0c38\u0c3e\u0c17\u0c41\u0c24\u0c41\u0c02\u0c26\u0c3f
 SearchableBar.notFound=\u0c2a\u0c26\u0c2c\u0c02\u0c27\u0c02 \u0c15\u0c28\u0c41\u0c17\u0c4a\u0c28\u0c2c\u0c21\u0c32\u0c47\u0c26\u0c41
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u0c05\u0c28\u0c4d\u0c28\u0c3f)
