--- a/properties/com/jidesoft/swing/swing_ur_IN.properties
+++ b/properties/com/jidesoft/swing/swing_ur_IN.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u0635\u0641\u062d\u06c1 \u06a9\u06cc \u0634\u0631\u064
 SearchableBar.reachedBottomRepeat=\u0635\u0641\u062d\u06c1 \u06a9\u0627 \u0627\u062e\u062a\u062a\u0627\u0645\u060c \u0627\u0648\u067e\u0631 \u0633\u06d2 \u062c\u0627\u0631\u06cc
 SearchableBar.reachedTopRepeat=\u0635\u0641\u062d\u06c1 \u06a9\u06cc \u0634\u0631\u0648\u0639\u0627\u062a\u060c \u0646\u06cc\u0686\u06d2 \u0633\u06d2 \u062c\u0627\u0631\u06cc
 SearchableBar.notFound=\u0641\u0642\u0631\u0627 \u0645\u0648\u062c\u0648\u062f \u0646\u06c1\u06cc\u06ba
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u0633\u0628\u06be\u06cc)
