--- a/properties/com/jidesoft/swing/swing_zh_CN.properties
+++ b/properties/com/jidesoft/swing/swing_zh_CN.properties
@@ -28,3 +28,8 @@ SearchableBar.reachedTop=\u5df2\u5230\u8fbe\u9875\u9762\u9876\u90e8
 SearchableBar.reachedBottomRepeat=\u5df2\u5230\u8fbe\u9875\u9762\u5e95\u90e8\uff0c\u4ece\u9876\u90e8\u5f00\u59cb
 SearchableBar.reachedTopRepeat=\u5df2\u5230\u8fbe\u9875\u9762\u9876\u90e8\uff0c\u4ece\u5e95\u90e8\u5f00\u59cb
 SearchableBar.notFound=\u672a\u627e\u5230\u77ed\u8bed
+
+#
+# CheckBoxList
+#
+CheckBoxList.all=(\u6240\u6709)
