--- a/properties/com/jidesoft/dialog/buttons_de.properties
+++ b/properties/com/jidesoft/dialog/buttons_de.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Abbrechen
+
+Button.yes=Ja
+
+Button.no=Nein
+
 Button.apply=Anwenden
 Button.apply.mnemonic=A
 
