--- a/properties/com/jidesoft/dialog/buttons_es.properties
+++ b/properties/com/jidesoft/dialog/buttons_es.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=Aceptar
+
+Button.cancel=Cancelar
+
+Button.yes=S\355
+
+Button.no=No
+
 Button.apply=Aplicar
 Button.apply.mnemonic=A
 
