--- a/properties/com/jidesoft/dialog/buttons_fr.properties
+++ b/properties/com/jidesoft/dialog/buttons_fr.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Annuler
+
+Button.yes=Oui
+
+Button.no=Non
+
 Button.apply=Appliquer
 Button.apply.mnemonic=A
 
