--- a/properties/com/jidesoft/dialog/buttons_it.properties
+++ b/properties/com/jidesoft/dialog/buttons_it.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Annulla
+
+Button.yes=S\354
+
+Button.no=No
+
 Button.apply=Applica
 Button.apply.mnemonic=A
 
