--- a/properties/com/jidesoft/dialog/buttons_ja.properties
+++ b/properties/com/jidesoft/dialog/buttons_ja.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=\u4E86\u89E3
+
+Button.cancel=\u53D6\u6D88\u3057
+
+Button.yes=\u306F\u3044(Y)
+
+Button.no=\u3044\u3044\u3048(N)
+
 Button.apply=\u9069\u7528(A)
 Button.apply.mnemonic=A
 
