--- a/properties/com/jidesoft/dialog/buttons_ko.properties
+++ b/properties/com/jidesoft/dialog/buttons_ko.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=\uD655\uC778
+
+Button.cancel=\uCDE8\uC18C
+
+Button.yes=\uC608(Y)
+
+Button.no=\uC544\uB2C8\uC624(N)
+
 Button.apply=\uc801\uc6a9(A)
 Button.apply.mnemonic=A
 
