--- a/properties/com/jidesoft/dialog/buttons_sv.properties
+++ b/properties/com/jidesoft/dialog/buttons_sv.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Avbryt
+
+Button.yes=Ja
+
+Button.no=Nej
+
 Button.apply=Verkst\u00e4ll
 Button.apply.mnemonic=V
 
