--- a/properties/com/jidesoft/dialog/buttons_zh_TW.properties
+++ b/properties/com/jidesoft/dialog/buttons_zh_TW.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=\u78BA\u5B9A
+
+Button.cancel=\u53D6\u6D88
+
+Button.yes=\u662F(Y)
+
+Button.no=\u5426(N)
+
 Button.apply=\u5957\u7528(A)
 Button.apply.mnemonic=A
 
