--- a/properties/com/jidesoft/dialog/buttons_zh_CN.properties
+++ b/properties/com/jidesoft/dialog/buttons_zh_CN.properties
@@ -6,9 +6,9 @@ Button.ok=\u786e\u5b9a
 
 Button.cancel=\u53d6\u6d88
 
-Button.yes=\u662f
+Button.yes=\u662f(Y)
 
-Button.no=\u5426
+Button.no=\u5426(N)
 
 Button.apply=\u5e94\u7528(A)
 Button.apply.mnemonic=A
