Grids,B,ButtonPopupPanel,Fixed so that ButtonPopupPanel will get the ok/cancel text from UIDefaults respecting the component's locale,64210,no
git-svn-id: https://svn.java.net/svn/jide-oss~svn/branches/trunk_3.2.4@2122 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/dialog/buttons_zh_CN.properties
+++ b/properties/com/jidesoft/dialog/buttons_zh_CN.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=\u786e\u5b9a
+
+Button.cancel=\u53d6\u6d88
+
+Button.yes=\u662f(Y)
+
+Button.no=\u5426(N)
+
 Button.apply=\u5e94\u7528(A)
 Button.apply.mnemonic=A
 
