French Translation, no

--- a/properties/com/jidesoft/plaf/basic/basic_fr.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_fr.properties
@@ -11,7 +11,7 @@ DockableFrameTitlePane.closeTooltip=Fermer
 
 DockableFrameTitlePane.hideAutohideText=Masquer
 DockableFrameTitlePane.hideAutohideMnemonic=M
-DockableFrameTitlePane.hideAutohideTooltip=Masquer la fen\u00eatre active \u00e0 masquage automatique
+DockableFrameTitlePane.hideAutohideTooltip=Masquer la fen\u00EAtre active \u00E0 masquage automatique
 
 DockableFrameTitlePane.floatingText=Flottant
 DockableFrameTitlePane.floatingMnemonic=T
@@ -33,16 +33,16 @@ DockableFrameTitlePane.maximizeTooltip=Agrandir/Restaurer
 #
 # Dockableframe attributes
 #
-DockableFrameTitlePane.dockableText=Ancr\u00e9
+DockableFrameTitlePane.dockableText=Ancr\u00E9
 DockableFrameTitlePane.dockableMnemonic=C
 
-DockableFrameTitlePane.hidableText=Susceptible d'\u00eatre masqu\u00e9
+DockableFrameTitlePane.hidableText=Susceptible d'\u00EAtre masqu\u00E9
 DockableFrameTitlePane.hidableMnemonic=I
 
-DockableFrameTitlePane.floatableText=Susceptible d'\u00eatre flottant
+DockableFrameTitlePane.floatableText=Susceptible d'\u00EAtre flottant
 DockableFrameTitlePane.floatableMnemonic=L
 
-DockableFrameTitlePane.autohidableText=Susceptible d'\u00eatre masqu\u00e9 automatiquement
+DockableFrameTitlePane.autohidableText=Susceptible d'\u00EAtre masqu\u00E9 automatiquement
 DockableFrameTitlePane.autohidableMnemonic=U
 
 #
@@ -50,8 +50,8 @@ DockableFrameTitlePane.autohidableMnemonic=U
 #
 Undo.dragging=Glissement
 Undo.hide=Masquer
-Undo.toggle=Basculer entre mode flottant/ancr\u00e9
-Undo.toggleAutohide=Basculer entre mode masqu\u00e9 automatiquement/ancr\u00e9
+Undo.toggle=Basculer entre mode flottant/ancr\u00E9
+Undo.toggleAutohide=Basculer entre mode masqu\u00E9 automatiquement/ancr\u00E9
 Undo.maximize=Agrandir
 Undo.restore=Restaurer
 Undo.resizing=Redimensionnement
@@ -59,13 +59,13 @@ Undo.resizing=Redimensionnement
 ##
 # Strings for CollapsiblePane
 #
-CollapsiblePane.collapseText=D\u00e9tailler/Compacter
-CollapsiblePane.collapseToolTip=D\u00e9tailler ou compacter le contenu
+CollapsiblePane.collapseText=D\u00E9tailler/Compacter
+CollapsiblePane.collapseToolTip=D\u00E9tailler ou compacter le contenu
 
 #
 # Strings for JideTabbedPane
 #
-JideTabbedPane.scrollBackward=Aller au document pr\u00e9c\u00e9dent
-JideTabbedPane.scrollForward=Aller au document suivant
-JideTabbedPane.showList=Visualiser la liste des documents
+JideTabbedPane.scrollBackward=Aller \u00E0 l'onglet pr\u00E9c\u00E9dent
+JideTabbedPane.scrollForward=Aller \u00E0 l'onglet suivant
+JideTabbedPane.showList=Afficher la liste des onglets
 JideTabbedPane.close=Fermer
