I18N,E,Properties,"Updated some fr localization properties, thanks jonathanlafleur",70634

--- a/properties/com/jidesoft/converter/converter_fr.properties
+++ b/properties/com/jidesoft/converter/converter_fr.properties
@@ -7,7 +7,7 @@ Boolean.false=Non
 #
 #Strings for FontConverter
 #
-Font.plain=Plain
+Font.plain=Simple
 Font.bold=Gras
 Font.italic=Italique
 Font.boldItalic=GrasItalique
