--- a/properties/com/jidesoft/dialog/buttons_fr.properties
+++ b/properties/com/jidesoft/dialog/buttons_fr.properties
@@ -28,7 +28,7 @@ Button.close.mnemonic=F
 Button.continue=Continuer
 Button.continue.mnemonic=C
 
-Button.edit=\u00c9dition
+Button.edit=\u00c9diter
 Button.edit.mnemonic=E
 
 Button.exit=Quitter
