--- a/properties/com/jidesoft/swing/swing_fr.properties
+++ b/properties/com/jidesoft/swing/swing_fr.properties
@@ -9,10 +9,10 @@ Searchable.noMatch=(aucun r\u00e9sultat)
 #
 SearchableBar.find=Rechercher:
 SearchableBar.find.mnemonic=R
-SearchableBar.findNext=Rechercher suivant
+SearchableBar.findNext=Rechercher suivante
 SearchableBar.findNext.mnemonic=S
 SearchableBar.findNext.tooltip=Rechercher l'occurrence suivante de l'expression
-SearchableBar.findPrevious=Rechercher pr\u00e9c\u00e9dent
+SearchableBar.findPrevious=Rechercher pr\u00e9c\u00e9dente
 SearchableBar.findPrevious.mnemonic=P
 SearchableBar.findPrevious.tooltip=Rechercher l'occurrence pr\u00e9c\u00e9dente de l'expression
 SearchableBar.highlights=Surbrillance
