--- a/properties/com/jidesoft/swing/swing_fr.properties
+++ b/properties/com/jidesoft/swing/swing_fr.properties
@@ -2,7 +2,7 @@
 # Strings for Searchable classes
 #
 Searchable.searchFor=Rechercher :
-Searchable.noMatch=(aucun r\u00e9sultat)
+Searchable.noMatch=(aucun r\u00E9sultat)
 
 #
 # Strings for SearchableBar classes
@@ -12,21 +12,23 @@ SearchableBar.find.mnemonic=R
 SearchableBar.findNext=Rechercher suivante
 SearchableBar.findNext.mnemonic=S
 SearchableBar.findNext.tooltip=Rechercher l'occurrence suivante de l'expression
-SearchableBar.findPrevious=Rechercher pr\u00e9c\u00e9dente
+SearchableBar.findPrevious=Rechercher pr\u00E9c\u00E9dente
 SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=Rechercher l'occurrence pr\u00e9c\u00e9dente de l'expression
+SearchableBar.findPrevious.tooltip=Rechercher l'occurrence pr\u00E9c\u00E9dente de l'expression
 SearchableBar.highlights=Surbrillance
 SearchableBar.highlights.mnemonic=S
 SearchableBar.highlights.tooltip=Met en surbrillance toutes les occurrences de l'expression
 SearchableBar.matchCase=Respecter la casse
 SearchableBar.matchCase.mnemonic=C
-SearchableBar.repeats=R\u00e9p\u00e9titions
+SearchableBar.repeats=R\u00E9p\u00E9titions
 SearchableBar.repeats.mnemonic=R
+SearchableBar.matches = occurence(s)
+SearchableBar.wholeWords = Mots entiers
 
 SearchableBar.reachedBottom=Bas de la page atteint
 SearchableBar.reachedTop=Haut de la page atteint
-SearchableBar.reachedBottomRepeat=Bas de la page atteint, reprise \u00e0 partir du haut 
-SearchableBar.reachedTopRepeat=Haut de la page atteint, reprise \u00e0 partir du bas
+SearchableBar.reachedBottomRepeat=Bas de la page atteint, reprise \u00E0 partir du haut 
+SearchableBar.reachedTopRepeat=Haut de la page atteint, reprise \u00E0 partir du bas
 SearchableBar.notFound=Expression introuvable
 
 #
