--- a/properties/com/jidesoft/swing/swing_fr.properties
+++ b/properties/com/jidesoft/swing/swing_fr.properties
@@ -22,7 +22,7 @@ SearchableBar.matchCase=Respecter la casse
 SearchableBar.matchCase.mnemonic=C
 SearchableBar.repeats=R\u00E9p\u00E9titions
 SearchableBar.repeats.mnemonic=R
-SearchableBar.matches = occurence(s)
+SearchableBar.matches = occurrence(s)
 SearchableBar.wholeWords = Mots entiers
 
 SearchableBar.reachedBottom=Bas de la page atteint
