--- a/properties/com/jidesoft/swing/swing_en.properties
+++ b/properties/com/jidesoft/swing/swing_en.properties
@@ -20,6 +20,8 @@ SearchableBar.highlights.mnemonic=H
 SearchableBar.highlights.tooltip=Highlights all occurrences of the phrase
 SearchableBar.matchCase=Match Case
 SearchableBar.matchCase.mnemonic=M
+SearchableBar.wholeWords=Whole Words
+SearchableBar.wholeWords.mnemonic=W
 SearchableBar.repeats=Repeats
 SearchableBar.repeats.mnemonic=R
 
@@ -28,6 +30,7 @@ SearchableBar.reachedTop=Reached top of the page
 SearchableBar.reachedBottomRepeat=Reached bottom of the page, continued from top
 SearchableBar.reachedTopRepeat=Reached top of the page, continued from bottom
 SearchableBar.notFound=Phrase not found
+SearchableBar.matches=Match(es)
 
 #
 # CheckBoxList
