Italian Translation Update, 73769

--- a/properties/com/jidesoft/converter/converter_it.properties
+++ b/properties/com/jidesoft/converter/converter_it.properties
@@ -1,5 +1,19 @@
-# @(#) converter_it.properties
+#
+#Strings for BooleanConverter
+#
+Boolean.true=Vero
+Boolean.false=Falso
 
+#
+#Strings for FontConverter
+#
+Font.plain=Normale
+Font.bold=Grassetto
+Font.italic=Corsivo
+Font.boldItalic=Corsivo/Grassetto
 
-Boolean.true=True
-Boolean.false=False
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Qtr {0}
+#Please note, there is a space at the end of Qtr.
