--- a/properties/com/jidesoft/swing/swing_it.properties
+++ b/properties/com/jidesoft/swing/swing_it.properties
@@ -20,6 +20,8 @@ SearchableBar.highlights.mnemonic=E
 SearchableBar.highlights.tooltip=Evidenzia tutte le occorrenze della frase
 SearchableBar.matchCase=Maiuscole/minuscole
 SearchableBar.matchCase.mnemonic=M
+SearchableBar.wholeWords=Parole intere
+SearchableBar.wholeWords.mnemonic=I
 SearchableBar.repeats=Ripetizioni
 SearchableBar.repeats.mnemonic=R
 
@@ -28,6 +30,7 @@ SearchableBar.reachedTop=Raggiunto inizio della pagina
 SearchableBar.reachedBottomRepeat=Raggiunta fine della pagina, continua dall'inizio
 SearchableBar.reachedTopRepeat=Raggiunto inizio della pagina, continua dalla fine
 SearchableBar.notFound=Frase non trovata
+SearchableBar.matches=Corrispondenza/e
 
 #
 # CheckBoxList
