Common,B,swing.properties,Added missing translations for swing_de.properties,75534,no

--- a/properties/com/jidesoft/swing/swing_de.properties
+++ b/properties/com/jidesoft/swing/swing_de.properties
@@ -2,24 +2,26 @@
 # Strings for Searchable classes
 #
 Searchable.searchFor=Suche nach:
-Searchable.noMatch=(Keine \u00dcbereinstimmung)
+Searchable.noMatch=(Keine \u00DCbereinstimmung)
 
 #
 # Strings for SearchableBar classes
 #
 SearchableBar.find=Suchen:
 SearchableBar.find.mnemonic=S
-SearchableBar.findNext=N\u00e4chste suchen
+SearchableBar.findNext=N\u00E4chste suchen
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=N\u00e4chstes Auftreten des Ausdrucks suchen
+SearchableBar.findNext.tooltip=N\u00E4chstes Auftreten des Ausdrucks suchen
 SearchableBar.findPrevious=Vorherige suchen
 SearchableBar.findPrevious.mnemonic=V
 SearchableBar.findPrevious.tooltip=Vorheriges Auftreten des Ausdrucks suchen
 SearchableBar.highlights=Hervorheben
 SearchableBar.highlights.mnemonic=H
 SearchableBar.highlights.tooltip=Jedes Auftreten des Ausdrucks hervorheben
-SearchableBar.matchCase=Gro\u00df-/Kleinschreibung
+SearchableBar.matchCase=Gro\u00DF-/Kleinschreibung
 SearchableBar.matchCase.mnemonic=K
+SearchableBar.wholeWords=Nur ganze W\u00F6rter suchen
+SearchableBar.wholeWords.mnemonic=G
 SearchableBar.repeats=Wiederholung
 SearchableBar.repeats.mnemonic=w
 
