--- a/properties/com/jidesoft/swing/swing_fr.properties
+++ b/properties/com/jidesoft/swing/swing_fr.properties
@@ -16,20 +16,21 @@ SearchableBar.findPrevious=Rechercher pr\u00E9c\u00E9dente
 SearchableBar.findPrevious.mnemonic=P
 SearchableBar.findPrevious.tooltip=Rechercher l'occurrence pr\u00E9c\u00E9dente de l'expression
 SearchableBar.highlights=Surbrillance
-SearchableBar.highlights.mnemonic=S
+SearchableBar.highlights.mnemonic=U
 SearchableBar.highlights.tooltip=Met en surbrillance toutes les occurrences de l'expression
 SearchableBar.matchCase=Respecter la casse
 SearchableBar.matchCase.mnemonic=C
+SearchableBar.wholeWords = Mots entiers
+SearchableBar.wholeWords.mnemonic=M
 SearchableBar.repeats=R\u00E9p\u00E9titions
 SearchableBar.repeats.mnemonic=R
-SearchableBar.matches = occurrence(s)
-SearchableBar.wholeWords = Mots entiers
 
 SearchableBar.reachedBottom=Bas de la page atteint
 SearchableBar.reachedTop=Haut de la page atteint
 SearchableBar.reachedBottomRepeat=Bas de la page atteint, reprise \u00E0 partir du haut 
 SearchableBar.reachedTopRepeat=Haut de la page atteint, reprise \u00E0 partir du bas
 SearchableBar.notFound=Expression introuvable
+SearchableBar.matches = occurrence(s)
 
 #
 # CheckBoxList
