--- a/properties/com/jidesoft/swing/swing_de.properties
+++ b/properties/com/jidesoft/swing/swing_de.properties
@@ -30,6 +30,7 @@ SearchableBar.reachedTop=Seitenanfang erreicht
 SearchableBar.reachedBottomRepeat=Seitenende erreicht, von oben fortgesetzt
 SearchableBar.reachedTopRepeat=Seitenanfang erreicht, von unten fortgesetzt 
 SearchableBar.notFound=Ausdruck nicht gefunden
+SearchableBar.matches=Exakt \u00FCbereinstimmend
 
 #
 # CheckBoxList
