update properties for no (norwegian)

--- a/properties/com/jidesoft/dialog/buttons_no.properties
+++ b/properties/com/jidesoft/dialog/buttons_no.properties
@@ -1,6 +1,14 @@
 #
-#Knapper
+#Buttons
 #
+
+Button.ok=OK
+
+Button.cancel=Avbryt
+
+Button.yes=Ja
+
+Button.no=Nei
 
 Button.apply=Bruk
 Button.apply.mnemonic=B
@@ -8,11 +16,11 @@ Button.apply.mnemonic=B
 Button.back=< Tilbake
 Button.back.mnemonic=T
 
-Button.browse=Let
-Button.browse.mnemonic=L
+Button.browse=Bla igjennom
+Button.browse.mnemonic=i
 
-Button.clear=Klarer
-Button.clear.mnemonic=K
+Button.clear=T\u00f8m
+Button.clear.mnemonic=T
 
 Button.close=Lukk
 Button.close.mnemonic=L
@@ -20,26 +28,26 @@ Button.close.mnemonic=L
 Button.continue=Fortsett
 Button.continue.mnemonic=F
 
-Button.edit=Rediger
-Button.edit.mnemonic=R
+Button.edit=Endre
+Button.edit.mnemonic=E
 
-Button.exit=G\u00e5 ut
-Button.exit.mnemonic=G
+Button.exit=Lukk
+Button.exit.mnemonic=L
 
 Button.find=Finn
 Button.find.mnemonic=F
 
-Button.findNext=Finn neste
+Button.findNext=Finn Neste
 Button.findNext.mnemonic=N
 
 Button.finish=Fullf\u00f8r
 Button.finish.mnemonic=F
 
-Button.forward=Forover 
+Button.forward=Fremover
 Button.forward.mnemonic=F
 
-Button.goback=G\u00e5 tilbake
-Button.goback.mnemonic=T
+Button.goback=Bakover
+Button.goback.mnemonic=G
 
 Button.help=Hjelp
 Button.help.mnemonic=H
@@ -51,16 +59,16 @@ Button.next=Neste >
 Button.next.mnemonic=N
 
 Button.open=\u00c5pne
-Button.open.mnemonic=\u00c5
+Button.open.mnemonic=E
 
-Button.print=Skriv ut
-Button.print.mnemonic=S
+Button.print=Print
+Button.print.mnemonic=P
 
 Button.replace=Erstatt
 Button.replace.mnemonic=E
 
 Button.retry=Pr\u00f8v igjen
-Button.retry.mnemonic=P
+Button.retry.mnemonic=J
 
 Button.run=Kj\u00f8r
 Button.run.mnemonic=K
